force-app/main/default/objects/Price_Book_Item__c/Price_Book_Item__c.object-meta.xml
<CustomObject>
    <label>Price Book Item</label>
    <nameField>
        <displayFormat>PBI-{000000}</displayFormat>
        <label>Price Book Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>