force-app/main/default/objects/Price_Book_Item__c/fields/Estimation_Cost_Local__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Cost_Local__c</fullName>
    <label>Estimation Cost Local</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>