force-app/main/default/objects/Price_Book_Item__c/fields/Estimation_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Cost_USD__c</fullName>
    <label>Estimation Cost USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>