force-app/main/default/objects/Price_Book_Item__c/fields/Inventory_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost_USD__c</fullName>
    <formula>Product_Name__r.Product_Sales_Info__r.Cost_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Cost USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>