force-app/main/default/objects/Price_Book_Item__c/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>In-transit Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>