force-app/main/default/objects/Price_Book_Item__c/fields/Is_Changing__c.field-meta.xml
<CustomField>
    <fullName>Is_Changing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Changing</label>
    <type>Checkbox</type>
</CustomField>