force-app/main/default/objects/Price_Book_Item__c/fields/Min_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Sales_Price__c</fullName>
    <label>Min Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>