force-app/main/default/objects/Price_Book_Item__c/fields/Portfolio_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Segmentation__c</fullName>
    <label>Portfolio Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>