force-app/main/default/objects/Price_Book_Item__c/fields/Price_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Id__c</fullName>
    <formula>CASESAFEID( Price_Book__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Id</label>
    <type>Text</type>
</CustomField>