force-app/main/default/objects/Price_Book_Item__c/fields/Price_Rate__c.field-meta.xml
<CustomField>
    <fullName>Price_Rate__c</fullName>
    <formula>Price__c / Min_Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>