force-app/main/default/objects/Price_Book_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipLabel>Price Book Item</relationshipLabel>
    <relationshipName>Price_Book_Item</relationshipName>
    <type>Lookup</type>
</CustomField>