force-app/main/default/objects/Price_Book_Item__c/fields/Product_Name_Delete__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Delete__c</fullName>
    <formula>Product_Name__r.Is_Delete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Delete</label>
    <type>Checkbox</type>
</CustomField>