force-app/main/default/objects/Price_Book_Item__c/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <formula>IF(TEXT(Product_Name__r.Product_Sales_Info__r.Default_Sales_Unit__c)=&apos;ST&apos;,&apos;PC&apos;,TEXT(Product_Name__r.Product_Sales_Info__r.Default_Sales_Unit__c))</formula>
    <label>Sales Unit</label>
    <type>Text</type>
</CustomField>