force-app/main/default/objects/Price_Book_Item__c/validationRules/Product_Name_Delete.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Name_Delete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Product_Name__r.Is_Delete__c,ISNEW())</errorConditionFormula>
    <errorDisplayField>Product_Name__c</errorDisplayField>
    <errorMessage>Product name deleted</errorMessage>
</ValidationRule>